--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -2,7 +2,7 @@
 // ContactForm.astro
 ---
 
-<section class="section">
+<section class="section" id="email">
     <h2 class="section-title">SEND US A MESSAGE</h2>
     <p class="mb-40">Fill out the form below and we'll get back to you as soon as possible.</p>
     
