--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -116,8 +116,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
             </div>
         </section>
 
-<!--       
-    <!-- Beginner Programs Section -->
+<!--   Beginner Programs Section     
         <section id="programs" class="section">
             <div class="container">
                 <h2 class="section-title">BEGINNER PROGRAMS</h2>
