--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -169,19 +169,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                     </li>
                     <li>
                         <h3>SEND YOUR DOCUMENTATION</h3>
-                        <p>Email your enrollment certificate and the location of your education to <span class="highlight">powerlifting@tskvspartacus.nl</span></p>
+                        <p>Email your enrollment certificate and the location of your education to <a href="mailto:powerlifting@tskvspartacus.nl"><span class="highlight">powerlifting@tskvspartacus.nl</span></a></p>
                         <p>Our competition secretary will ensure the KNKF receives the document to register your student status.</p>
                     </li>
                     <li>
-                        <h3>COMPLETE KNKF REGISTRATION</h3>
-                        <p>Register with the KNKF through the Banster member portal:</p>
-                        <ul>
-                            <li>Select "Competition member" for the billing model</li>
-                            <li>Select "Powerlifting" for the sport</li>
-                            <li>Complete the mandatory e-learning module at the Doping Authority</li>
-                            <li>Inform our competition secretary of your KNKF membership number and date of birth</li>
-                        </ul>
-                    </li>
+                    <h3>COMPLETE KNKF REGISTRATION</h3>
+                    <li>Register with the KNKF through the Banster member portal:</li>
+                    <li>Select "Competition member" for the billing model</li>
+                    <li>Select "Powerlifting" for the sport</li>
+                    <li>Complete the mandatory e-learning module at the Doping Authority</li>
+                    <li>Inform our competition secretary of your KNKF membership number and date of birth</li>
                 </ol>
                 
                 <div class="knkf-registration">
