--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -109,9 +109,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                         <li>Appropriate gym clothing</li>
                         <li>Flat-soled shoes (for squatting and deadlifting)</li>
                         <li>Water bottle</li>
-                        <li>Optionally: lifting belt, wrist wraps, knee sleeves</li>
+                        <li>Towel</li>
+                        <li>Optionally: lifting belt, wrist wraps, knee sleeves, squat shoes</li>
                     </ul>
-                    <p><strong>Note:</strong> New members should attend a coached session first to learn proper technique and gym etiquette.</p>
                 </div>
             </div>
         </section>
