--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -172,6 +172,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                         <p>Email your enrollment certificate and the location of your education to <a href="mailto:powerlifting@tskvspartacus.nl"><span class="highlight">powerlifting@tskvspartacus.nl</span></a></p>
                         <p>Our competition secretary will ensure the KNKF receives the document to register your student status.</p>
                     </li>
+                    <h3>COMPLETE KNKF REGISTRATION</h3>
                     <li>
                     <h3>COMPLETE KNKF REGISTRATION</h3>
                     <li>Register with the KNKF through the Banster member portal:</li>
