--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -186,7 +186,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                     <h3>IMPORTANT NOTES</h3>
                     <p>For competition registrations, it can take up to one day for your membership to synchronize with our systems.</p>
                     <p>The automatic collection by the KNKF will only take place later. Do not transfer any fees without asking first.</p>
-                    <p>If you need assistance with the registration process, please contact our competition secretary at <a href="mailto:powerlifting@tskvspartacus.nl"><span class="highlight">powerlifting@tskvspartacus.nl</span></a>highlight">powerlifting@tskvspartacus.nl</span></a></p>
+                    <p>If you need assistance with the registration process, please contact our competition secretary at <a href="mailto:powerlifting@tskvspartacus.nl"><span class="highlight">powerlifting@tskvspartacus.nl</span></a></p>
                 </div>
             </div>
         </section>
