--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -171,12 +171,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                         <h3>SEND YOUR DOCUMENTATION</h3>
                         <p>Email your enrollment certificate and the location of your education to <a href="mailto:powerlifting@tskvspartacus.nl"><span class="highlight">powerlifting@tskvspartacus.nl</span></a></p>
                         <p>Our competition secretary will ensure the KNKF receives the document to register your student status.</p>
-                    <h3>COMPLETE KNKF REGISTRATION</h3>
-                        <li>Register with the KNKF through the Banster member portal:</li>
-                        <li>Select "Competition member" for the billing model</li>
-                        <li>Select "Powerlifting" for the sport</li>
-                        <li>Complete the mandatory e-learning module at the Doping Authority</li>
-                        <li>Inform our competition secretary of your KNKF membership number and date of birth</li>
+                    <li> 
+                        <h3>COMPLETE KNKF REGISTRATION</h3>
+                        <p>4.1 Register with the KNKF through the Banster member portal:</p>
+                        <p>4.2 Select "Competition member" for the billing model</p>
+                        <p>4.3 Select "Powerlifting" for the sport</p>
+                        <p>4.4 Complete the mandatory e-learning module at the Doping Authority</p>
+                        <p>4.5 Inform our competition secretary of your KNKF membership number and date of birth</p>
+                    </li>
                 </ol>
                 
                 <div class="knkf-registration">
