--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -174,7 +174,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 </section>
 
 <!-- Calendar Section -->
-</ calendar>
+<calendar/>
 
             <!-- Call to Action -->
             <section class="section text-center">
