--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -47,7 +47,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                         <p>Our section welcomes lifters of all experience levels, from complete beginners to competitive athletes. We provide structured training programs, technical coaching, and competition opportunities throughout the academic year.</p>
                         <p>As part of the Royal Dutch Strength Sports and Fitness Federation (KNKF), our members have the opportunity to compete at regional and national powerlifting competitions.</p>
                         <div class="button-container">
-                            <a href="https://knkf-sectiepowerliften.nl/kalender/" class="btn">UPCOMING COMPETITIONS</a>
+                            <a href="https://knkf-sectiepowerliften.nl/kalender/" class="btn">UPCOMING COMPETITIONS target="_blank"</a>
                         </div>
                     </div>
                     <div class="about-image">
@@ -173,7 +173,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                         <p>Our competition secretary will ensure the KNKF receives the document to register your student status.</p>
                     <li> 
                         <h3>COMPLETE KNKF REGISTRATION</h3>
-                        <p>4.1 Register with the KNKF through the Banster member portal:</p>
+                        <p>4.1 Register with the KNKF through the <a href="https://knkf.banster.nl/lid_worden_lid_worden"><span class="highlight">Banster member portal</span></a></p>
                         <p>4.2 Select "Competition member" for the billing model</p>
                         <p>4.3 Select "Powerlifting" for the sport</p>
                         <p>4.4 Complete the mandatory e-learning module at the Doping Authority</p>
