--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import calendar from '../components/calendar.astro';
+import Calendar from '../components/Calendar.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
@@ -174,7 +174,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 </section>
 
 <!-- Calendar Section -->
-<calendar />
+<Calendar />
 
             <!-- Call to Action -->
             <section class="section text-center">
