--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -169,7 +169,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                     </li>
                     <li>
                         <h3>SEND YOUR DOCUMENTATION</h3>
-                        <p>Email your enrollment certificate and the location of your education to <a href="mailto:powerlifting@tskvspartacus.nl"><span class="highlight">powerlifting@tskvspartacus.nl</span></a></p>
+                        <p>Email your enrollment certificate and the location of your education to <a href="mailto:powerlifting@tskvspartacus.nl" target="_blank"><span class="highlight">powerlifting@tskvspartacus.nl</span></a></p>
                         <p>Our competition secretary will ensure the KNKF receives the document to register your student status.</p>
                     <li> 
                         <h3>COMPLETE KNKF REGISTRATION</h3>
