--- a/src/pages/strenghtsports.astro
+++ b/src/pages/strenghtsports.astro
@@ -60,6 +60,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                         </ul>
                         <br>
                         <p>Whether you're looking to compete or simply get stronger, our powerlifting program provides the perfect foundation.</p>
+                        <a href="/powerlifting" class="btn">Learn more</a>
                     </div>
                     <div class="about-image">
                         <img src="placeholder-powerlifting.jpg" alt="Powerlifting at Spartacus">
