--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
     <div class="cta-container">
         <div class="top-row">
             <a href="/index" class="logo">T.S.K.V. <span>Spartacus</span></a>
-            <a href="/register" class="cta-button">Register!</a>
+            <a href="/register" class="cta-button">Become a Member!</a>
         </div>
         <div class="header-right">
             <nav>
