--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -27,7 +27,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
                     <h2>STRENGTH THROUGH DISCIPLINE</h2>
                     <p>Welcome to the powerlifting section of T.S.K.V. Spartacus, where we combine technique, strength, and community to help you reach your full potential in the sport of powerlifting.</p>
                     <div class="hero-buttons">
-                        <a href="/../contact#email" class="btn">APPLY FOR COACHING</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSXlvtX-MaUvgCUhzlEINZGP-QWAqJkiscxRrLn7XSVLUbvA/viewform?usp=sf_link" target="_blank" class="btn">APPLY FOR COACHING</a>
                         <a href="/../index#calendar" class="btn btn-secondary">VIEW TRAINING SCHEDULE</a>
                     </div>
                 </div>
