--- a/src/pages/strenghtsports/powerlifting.astro
+++ b/src/pages/strenghtsports/powerlifting.astro
@@ -100,8 +100,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
             <div class="container">
                 <h2 class="section-title">POWERLIFTING TRAININGS</h2>
                 <p>We offer structured powerlifting training sessions throughout the week, with dedicated times for coached sessions and open training. Our training environment is supportive and motivating, with experienced lifters always willing to help newcomers.</p>
-                
-                <calendar />
+                <p>Contact us to setup a free training </p>
+                <div class="text-center">
+                    <a href="/../contact#email" class="btn">Join a training!</a>
+                </div>
                 
                 <div class="info-box">
                     <h3>WHAT TO BRING</h3>
