--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -14,7 +14,7 @@ import Footer from '../components/Footer.astro';
 
 <main>
 <link rel="stylesheet" href="https://leden.conscribo.nl/common_resources/css/WebForm.css">
-<div id="cwfForm">Formulier wordt geladen ...</div>
+<div id="cwfForm">Form is being loaded</div>
 <script type="text/javascript" src="https://leden.conscribo.nl/testorganisatie/jsForm/load/f7f1/cwfForm" ></script>
 </main>
 
