--- a/src/pages/registration.astro
+++ b/src/pages/registration.astro
@@ -2,9 +2,6 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-
-// Import your CSS file
-import '../styles/registration-style.css';
 ---
 
 <!DOCTYPE html>
@@ -16,11 +13,11 @@ import '../styles/registration-style.css';
     <Header />
 
 <main>
-<link rel="stylesheet" href=/registration-style.css
->
+<link rel="stylesheet" href="https://leden.conscribo.nl/common_resources/css/WebForm.css">
 <div id="cwfForm">Form is being loaded</div>
 <script type="text/javascript" src="https://leden.conscribo.nl/testorganisatie/jsForm/load/f7f1/cwfForm" ></script>
 </main>
+
 
 <footer />
 
