--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -47,7 +47,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                     
                     <div class="board-members">
                         <div class="board-member">
-                            <img src="../../public/images/board_1.png" alt="Board Chair">
+                            <img src="../../public/images/Board_1.png" alt="Board Chair">
                             <h3 class="board-member-name">Merel van Buren</h3>
                             <p class="board-member-role">Chair</p>
                             <p class="board-member-email"><a href="mailto:Voorzitter@tskvspartacus.nl">Voorzitter@tskvspartacus.nl</a></p>
