--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -54,21 +54,21 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                         </div>
                         
                         <div class="board-member">
-                            <img src="placeholder-board2.jpg" alt="Board Secretary">
+                            <img src="/images/Board_2.png" alt="Board Secretary">
                             <h3 class="board-member-name">Jelle Smitss</h3>
                             <p class="board-member-role">Vice Chair</p>
                             <p class="board-member-email"><a href="mailto:Vicevoorzitter@tskvspartacus.nl">Vicevoorzitter@tskvspartacus.nl</a></p>
                         </div>
                         
                         <div class="board-member">
-                            <img src="placeholder-board3.jpg" alt="Board Treasurer">
+                            <img src="/images/Board_3.png" alt="Board Treasurer">
                             <h3 class="board-member-name">Herman Skledar</h3>
                             <p class="board-member-role">Treasurer</p>
                             <p class="board-member-email"><a href="mailto:Penningmeester@tskvspartacus.nl">Penningmeester@tskvspartacus.nl</a></p>
                         </div>
                         
                         <div class="board-member">
-                            <img src="placeholder-board4.jpg" alt="Internal Affairs">
+                            <img src="/images/Board_4.png" alt="Internal Affairs">
                             <h3 class="board-member-name">Sam Aras</h3>
                             <p class="board-member-role">Secretary</p>
                             <p class="board-member-email"><a href="mailto:Secretaris@tskvspartacus.nl">Secretaris@tskvspartacus.nl</a></p>
@@ -80,8 +80,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                 <section class="section">
                     <div class="about-content">
                         <div class="about-image">
-                            <img src="placeholder-university.jpg" alt="Tilburg University Sports Center">
-                            <img src="placeholder-FOSST.jpg" alt="FOSST">
+                            <img src="/images/TilburgUniversity.png" alt="Tilburg University Sports Center">
+                            <img src="/images/FOSST.png" alt="FOSST">
                         </div>
                         <div class="about-text">
                             <h2 class="section-title">Our Affiliation</h2>
@@ -102,7 +102,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                     <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
                     <a href="/history" class="btn">Explore our History</a>
                     <div class="about-image">
-                        <img src="Old-Spartacus.jpg" alt="Old-Spartacus">
+                        <img src="/images/Old_Spartacus.png" alt="Old-Spartacus">
                     </div>
                 </section>
 
