--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -102,7 +102,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                     <p class="mb-40">Founded in 2012, T.S.K.V. Spartacus has grown from a small group of enthusiasts to the largest student strength sports association in the Benelux.</p>
                     <a href="/history" class="btn">Explore our History</a>
                     <div class="about-image">
-                        <img src="/images/Old_Spartacus.png" alt="Old-Spartacus">
+                        <img src="/images/Old_Spartacus.jpg" alt="Old-Spartacus">
                     </div>
                 </section>
 
