--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -100,7 +100,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
             <h2 class="section-title centered-title">Words from Our Founders</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="placeholder-founder.jpg" alt="Spartacus Founder">
+                    <img src="/images/Sjoerd_1" alt="Spartacus Founder">
                 </div>
                 <div class="about-text">
                     <blockquote>
