--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
 // Import your CSS file
-import '../styles/global.css';
+import '../styles/global-css.css';
 
 // Define props the component will accept
 interface Props {
