--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
 <!DOCTYPE html>
+<BaseHead pageCss="about.css" />
+
 <html lang="en">
     <head>
         <BaseHead />
