--- a/src/pages/become-a-member.astro
+++ b/src/pages/become-a-member.astro
@@ -8,6 +8,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 
 <!DOCTYPE html>
 <html lang="en">
+<BaseHead pageCss="membership.css" />
 
 <head>
     <BaseHead />
