--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
 <!DOCTYPE html>
-<BaseHead pageCss="styles/about.css" />
+<BaseHead pageCss="../styles/about.css" />
 
 <html lang="en">
     <head>
