--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,10 +3,10 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import '../styles/global.css';
 ---
 
 <!DOCTYPE html>
-<BaseHead pageCss="../styles/about.css" />
 
 <html lang="en">
     <head>
