--- a/src/pages/become-a-member.astro
+++ b/src/pages/become-a-member.astro
@@ -4,11 +4,11 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import ContactForm from '../components/ContactForm.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import '../styles/pages/membership.css';
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-<BaseHead pageCss="membership.css" />
 
 <head>
     <BaseHead />
