--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import Calendar from '../components/Calendar.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import '../styles/pages/index.css';
 ---
 
 <!DOCTYPE html>
